@@ -38,6 +38,7 @@ Changes that do not introduce incompatibilities:
 * sprite:get_frame_delay() can now optionally take an animation.
 * sprite:get_size() can now optionally take an animation and direction.
 * sprite:get_origin() can now optionally take an animation and direction.
+* Add method get_angle() to more movement types (#1122) by stdgregwar.
 
 Data files format changes
 -------------------------
